concord_macros/tests/trybuild/fail/codegen/reserved_nocontent_arity_zero.rs
use concord_macros::api;

api! {
    client ReservedNoContentArityZeroApi {
        base "https://example.com"
    }

    GET Ping
        path ["ping"]
        -> NoContent<>
}

fn main() {}
